--- a/client/index.html
+++ b/client/index.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="todo.css">
     <link src="todo.js">
 </head>
-<body>
+<body onload="fetchTasks()">
     <div class="container">
         <h2>To-Do List</h2>
-        <input type="text" id="taskInput" placeholder="Add a new task">
-        <button onclick="addTask()">Add</button>
-        <ul id="taskList"></ul>
+        <input type="text" id="taskInput" placeholder="Add a new task">        
+        <input type="number" id="projectId" placeholder="Project ID">
+        <button type="button" id="addButton" class="add-button" onclick="addTask()">Add</button>
+        <ul class="task-list" id="taskList"></ul>
     </div>
 
     <script src="todo.js"></script>
